# Flow.Launcher.Plugin.YoudaoTranslate

./: .env  .gitignore  README.md  SettingsTemplate.yaml  build.py  commands.py  main.py  plugin.json  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  run.spec  settings.py  test.py
.github/workflows/: pr-packager.yml  release.yml  test-python.yml  test.yml
plugin/: __init__.py  extensions.py  main.py  settings.py  ui.py
plugin/flox/: __init__.py  browser.py  launcher.py  settings.py  string_matcher.py  utils.py
plugin/translations/en_US/LC_MESSAGES/: messages.mo
plugin/translations/zh_CN/LC_MESSAGES/: messages.mo
translations/zh_CN/LC_MESSAGES/: messages.po
