[project]
name = "flow-launcher-plugin-youdao-translate"
version = "1.0.0"
description = "Youdao Translate plugin for Flow Launcher"
authors = [
    {name = "Anderson", email = "andersonby@163.com"},
]
dependencies = [
    "youdaoai",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}


[dependency-groups]
dev = [
    "pyinstaller",
    "ruff",
    "ty",
]


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm.scripts]
build = "python build.py -v 0.0.29 -t p"
